# panda_simple_pick_place

./: .gitignore  README.md  panda_test.urdf
src/franka_ros/franka_control/config/: default_controllers.yaml  franka_control_node.yaml
src/franka_ros/franka_control/launch/: franka_control.launch
src/franka_ros/franka_description/robots/: hand.xacro  panda.control.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  panda_test.urdf  utils.xacro
src/franka_ros/franka_description/robots/panda/: panda.urdf
src/franka_ros/franka_gazebo/launch/: panda.launch  robot.launch
src/gazebo_ros_pkgs/gazebo_dev/: package.xml
src/gazebo_ros_pkgs/gazebo_msgs/: package.xml
src/gazebo_ros_pkgs/gazebo_plugins/: package.xml
src/gazebo_ros_pkgs/gazebo_ros/: package.xml
src/gazebo_ros_pkgs/gazebo_ros_control/: package.xml
src/gazebo_ros_pkgs/gazebo_ros_pkgs/: package.xml
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: fake_controllers.yaml  gazebo_panda.urdf  kinematics.yaml  ompl_planning.yaml  panda.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
src/panda_moveit_config/launch/: gazebo.launch
src/pick_n_place/: CMakeLists.txt  package.xml
src/pick_n_place/launch/: spawn_world.launch
src/pick_n_place/models/cube_blue/: model.config  model.sdf
src/pick_n_place/models/cube_green/: model.config  model.sdf
src/pick_n_place/models/cube_red/: model.config  model.sdf
src/pick_n_place/models/work_table/: model.config  model.sdf
src/pick_n_place/scripts/: add_objects_to_moveit.py
src/pick_n_place/worlds/: test.world
