<?xml version="1.0"?>
<package format="2">
  <name>pick_n_place</name>
  <version>0.0.1</version>
  <description>Pick and Place project for Panda robot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>

</package>
